CP commiteado por Ferk94 a las 1621520919000

--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -5,49 +5,54 @@
  
    <link rel="stylesheet" href="styles.css">
  
-   <tittle> Tarea HTML de Fernando Kaganovicz</tittle>
+     <tittle> Tarea HTML de Fernando Kaganovicz</tittle>
   
  
   </head>
  
  <body>
+  <div class="flex-container">
  
- <div class="divClass">
+    <div class="divClass">
  
- <h1>Fernando</h1>
+      <h1>Fernando Kaganovicz</h1>
  
-   <h3>Henry</h1>
+         <h3>Henry</h1>
  
-     <h4>tarea de HTML / CSS</h4>
+          <h4>tarea de HTML / CSS</h4>
+
+         </div>
  
  <div class="divClass">
  
    <span id="spanId">Mi comida favorita son los ravioles con salsa mixta</span>
    
-   <a href="https://maxipasta.com.ar"> Restaurante favorito </a>
+     <a href="https://maxipasta.com.ar"> Restaurante favorito </a>
    
    </div>
  
    <div id="thirdDiv">
  
-    <ul>
+     <ul>
  
-    <li>
+       <li>
  
-     <img src =https://www.superama.com.mx/views/micrositio/recetas/images/comidaitaliana/ravioles/Web_fotoreceta.jpg />
+         <img src =https://www.superama.com.mx/views/micrositio/recetas/images/comidaitaliana/ravioles/Web_fotoreceta.jpg />
        
-   </li>
+  </li>
  
    <li>
  
      <img src="https://img-global.cpcdn.com/recipes/9f5230071f3b0e02/751x532cq70/ravioles-foto-principal.jpg"/>
    
-   </li>
+  </li>
  
-     </ul>
+  </ul>
     
-    </div>
+  </div>
+  
+  </div>
  
   </body>
  
-   </html>
+  </html>
